--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,45 @@
                 <img src="/src/img/Logos/Verizon.svg" alt="">
             </div>
         </div>
-      
+        <div class="grid grid-cols-1 xl:grid-cols-2 my-12 xl:gap-10 justify-items-center text-white">
+            <div class="">
+                <div class="">
+                    <a href="#">
+                        <img class="rounded-t-lg w-full" src="/src/img/Spense.png" alt="">
+                    </a>
+                    <div class="py-5">
+                        <a href="#">
+                            <h5 class="mb-2 text-2xl font-prata text-white">
+                                Spense.com <i class="fa-solid  fa-arrow-right-long"></i>
+                            </h5>
+                        </a>
+                        <p class="mb-3 font-normal text-base xl:mr-5 mr-5 text-gray-700 dark:text-gray-400">
+                            Rethinking the way writers get paid, an open-source platform designed to help writers focus
+                            more on writing, and less on when and how they'll get paid. Project in collaboration with
+                            Codewell.cc
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="">
+                    <a href="#">
+                        <img class="rounded-t-lg w-full" src="/src/img/YelpCamp.png" alt="">
+                    </a>
+                    <div class="py-5">
+                        <a href="#">
+                            <h5 class="mb-2 text-2xl font-prata text-white">
+                                YelpCamp.com  <i class="fa-solid fa-arrow-right-long"></i>
+                            </h5>
+                        </a>
+                        <p class="mb-3 font-normal xl:mr-5 mr-5 text-gray-700 dark:text-gray-400">
+                            Allowing backpack travelers to perfectly plan their trip through an open-source platform
+                            similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowd's favorite in 2021.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
     <script src="/src/main.js"></script>
