--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body class="bg-black ">
 
-    <nav class=" mx-5 lg:mx-40 ">
+    <nav class=" mx-5 xl:mx-40 ">
         <div class="flex  justify-between">
             <div>
                 <!-- Website Logo -->
@@ -69,7 +69,7 @@
                     </a>
                 </li>
                 <li class="py-4 px-2">
-                    <a href="" class="p-2 text-black bg-[#FBE850] rounded hover:white font-bold hover:text-gray-500 ">
+                    <a href="" class="p-2 text-black bg-[#FBE850] font-prata font-bold hover:text-gray-500 ">
                         Get Started
                     </a>
                 </li>
@@ -77,9 +77,7 @@
         </div>
     </nav>
     <main class="mx-8 lg:mx-40  ">
-
-
-        <div class=" md:w-full lg:w-full xl:w-3/4 2xl:w-3/5  py-10 ">
+        <div class=" md:w-full lg:w-full xl:w-3/4 2xl:w-3/5  py-5 ">
             <h1 class="text-white font-prata tracking-widest py-5 text-2xl md:text-4xl  xl:text-5xl   2xl:text-6xl">
                 Helping companies build better,
                 scalable software.</h1>
@@ -141,7 +139,7 @@
                                 Spense.com <i class="fa-solid  fa-arrow-right-long"></i>
                             </h5>
                         </a>
-                        <p class="mb-3 font-normal text-base xl:mr-5 mr-5 text-gray-700 dark:text-gray-400">
+                        <p class="mb-3 font-normal text-base xl:mr-5 mr-5 text-gray-400 ">
                             Rethinking the way writers get paid, an open-source platform designed to help writers focus
                             more on writing, and less on when and how they'll get paid. Project in collaboration with
                             Codewell.cc
@@ -157,10 +155,10 @@
                     <div class="py-5">
                         <a href="#">
                             <h5 class="mb-2 text-2xl font-prata text-white">
-                                YelpCamp.com  <i class="fa-solid fa-arrow-right-long"></i>
+                                YelpCamp.com <i class="fa-solid fa-arrow-right-long"></i>
                             </h5>
                         </a>
-                        <p class="mb-3 font-normal xl:mr-5 mr-5 text-gray-700 dark:text-gray-400">
+                        <p class="mb-3 font-normal xl:mr-5 mr-5 text-gray-400 ">
                             Allowing backpack travelers to perfectly plan their trip through an open-source platform
                             similar to TripAdvisor. With over 1m MAU, YelpCamp has been the crowd's favorite in 2021.
                         </p>
@@ -168,8 +166,60 @@
                 </div>
             </div>
         </div>
-
     </main>
+    <section class=" px-5 xl:px-40 py-20 grid grid-cols-1 xl:grid-cols-2 my-12 xl:gap-10  justify-items-center text-white bg-[#2E3038]">
+        <div class=" ">
+            <div>
+                <h1 class="text-3xl text-white font-prata font-bold tracking-widest py-5  ">
+                    A co-founder at one of the world's largest communities.
+                </h1>
+            </div>
+            <div class="leading-7 text-gray-400 tracking-wider text-lg pr-12">
+                The combined experience I have working at the top Fortune 500 companies has allowed me to developer a
+                skillset that helps me in not just development, but in every aspect of any business. <br /><br />
+                I'm proud to announce that I am now working at one of the world's largest communities teaching young
+                minds about how to sell yourself as a developer and open them to a whole new world of opportunities.
+            </div>
+        </div>
+        <div class="">
+            <div class="leading-7 text-gray-400 tracking-wider text-lg xl:pl-12 py">
+                As a developer, you have everything available to you and all that's holding you back is yourself.
+                <br />
+                <br />
+                A quote I live by perfectly illustrates what I mean.
+                <br />
+                <br />
+                "How big would you dream, if you knew you wouldn't fail?" You've already gone through the hardest parts
+                being a developer, it's time to elevate your skills and become a leader, in something you're passionate
+                about.
+                <br />
+                <br />
+                I'm happy to chat over coffee some time about how I can help your company.
+            </div>
+        </div>
+    </section>
+    <section class="px-5 xl:px-40 py-20  my-12  text-white ">
+        <div class=" ">
+            <div>
+                <h1 class=" xl:text-3xl   text-white font-prata font-extrabold tracking-widest  ">
+                    Interested in working with me?
+                </h1>
+            </div>
+            <div class="leading-7 text-gray-400 w-2/3 2xl:text-xl  xl:w-2/5">
+                I'm active on all social media platforms listed below, but you, can also me an email and I will get back
+                to you within 24-48, hours.
+            </div>
+            <div class="py-6">
+                <button class="py-4 px-6 text-black text-xl font-prata bg-[#FBE850] ">
+                   <a href="">
+                        Get in touch
+                   </a> 
+                </button>
+            </div>
+            
+        </div>
+
+    </section>
     <script src="/src/main.js"></script>
 </body>
 
